--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "inspectgpt",
   "displayName": "InspectGPT",
   "publisher": "O-T-S",
-  "description": "Your extension description here",
-  "version": "1.0.1",
+  "description": "AI code Inspector and Assistant. No API Needed.",
+  "version": "3.0.3",
   "engines": {
     "vscode": "^1.81.0"
   },
   "categories": [
+    "Debuggers",
+    "Education",
     "Other"
   ],
   "activationEvents": [
     "onStartupFinished",
+    "onCommand:extension.openWebview",
     "onCommand:inspectgpt.openWebview"
   ],
   "main": "./extension.js",
@@ -36,6 +39,10 @@
       {
         "command": "extension.inspectGPT",
         "title": "InspectGPT"
+      },
+      {
+        "command": "extension.openWebview",
+        "title": "Open Webview"
       }
     ],
     "menus": {
@@ -86,7 +93,7 @@
     "eslint": "^8.47.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "@google-ai/generativelanguage": "^1.1.0",
@@ -95,13 +102,25 @@
     "dotenv": "^16.3.1",
     "fast-xml-parser": "^4.2.7",
     "node-fetch": "^3.3.2",
-    "xml-parser": "^1.2.1",
-    "typescript": "^4.0.0"
+    "xml-parser": "^1.2.1"
   },
   "icon": "images/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/your-username/inspect-gpt-extension.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "outDir": "./out",
+    "rootDir": "./src",
+    "strict": true
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
